# kedro-argo

./: .coveragerc  LICENSE  pyproject.toml  tox.ini
kedro_argo/: __init__.py  plugin.py  utils.py
tests/: test_plugin.py  test_utils.py
