[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kedro_argo"
authors = [{name = "Deepyaman Datta", email = "deepyaman.datta@utexas.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "argo-workflows ~=6.3.0rc2",
    "kedro >=0.16",
    "typer >=0.3",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/deepyaman/kedro_argo"

[project.entry-points."kedro.project_commands"]
argo = "kedro_argo.plugin:commands"
